fix card art clipping for minions

--- a/src/css/components/game/card/card-art.component.scss
+++ b/src/css/components/game/card/card-art.component.scss
@@ -1,39 +1,40 @@
 :host {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    top: 0;
-    left: 0;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	align-content: center;
+	justify-content: center;
+	top: 0;
+	left: 0;
 }
 
 .card-art {
-    position: relative;
-    width: 79%;
-    top: -17%;
-    left: 2%;
-    object-fit: contain;
+	position: relative;
+	width: 79%;
+	top: -17%;
+	left: 2%;
+	object-fit: contain;
 
-    &.minion {
-        clip-path: ellipse(37% 26% at 50% 50%);
-    }
+	&.minion {
+		clip-path: ellipse(37% 25% at 50% 50%);
+		top: -19%;
+	}
 
-    &.spell {
-        clip-path: inset(31% 4% 30% 0%);
-    }
+	&.spell {
+		clip-path: inset(31% 4% 30% 0%);
+	}
 
-    &.weapon {
-        clip-path: ellipse(37% 21% at 50% 50%);
-    }
+	&.weapon {
+		clip-path: ellipse(37% 21% at 50% 50%);
+	}
 
-    &.hero_power {
-        clip-path: ellipse(37% 21% at 50% 50%);
-    }
+	&.hero_power {
+		clip-path: ellipse(37% 21% at 50% 50%);
+	}
 
-    &.unknown {
-        width: 100%;
-        top: -3%;
-    }
+	&.unknown {
+		width: 100%;
+		top: -3%;
+	}
 }
